# service/category.go
@@ -1,0 +1,50 @@
+package service
+
+import (
+	"github.com/gin-gonic/gin"
+	"log"
+	"net/http"
+	"online-judge/define"
+	"online-judge/models"
+	"strconv"
+)
+
+// GetCategoryList
+// @Tags 管理员私有方法
+// @Summary 分类列表
+// @Param authorization header string true "authorization"
+// @Param page query int false "page"
+// @Param size query int false "size"
+// @Param keyword query string false "keyword"
+// @Success 200 {string} json "{"code":"200","data":""}"
+// @Router /category-list [get]
+func GetCategoryList(ctx *gin.Context) {
+	size, _ := strconv.Atoi(ctx.DefaultQuery("size", define.DefaultSize))
+	page, err := strconv.Atoi(ctx.DefaultQuery("page", define.DefaultPage))
+	if err != nil {
+		log.Println("Get Problem List Page strconv Error:", err)
+		return
+	}
+	var count int64
+	page = (page - 1) * size
+
+	keyword := ctx.Query("keyword")
+	list := make([]*models.CategoryBasic, 0)
+	err = models.DB.Model(new(models.CategoryBasic)).Where("name like ?", "%"+keyword+"%").
+		Count(&count).Limit(size).Offset(page).Find(&list).Error
+	if err != nil {
+		ctx.JSON(http.StatusOK, gin.H{
+			"code": -1,
+			"msg":  "获取分类列表失败",
+		})
+		return
+	}
+
+	ctx.JSON(http.StatusOK, gin.H{
+		"code": 200,
+		"data": map[string]interface{}{
+			"list":  list,
+			"count": count,
+		},
+	})
+}
